--- a/src/main/css/tree.scss
+++ b/src/main/css/tree.scss
@@ -19,6 +19,12 @@
 */
 
 #tree-view {
+  overflow: auto;
+  max-height: 100%;
+  max-width: 240px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  
   .tree-list {
     list-style: none;
     margin: 0;
@@ -31,7 +37,7 @@
   }
 
   .tree-node-label {
-    display: flex;
+    //display: flex;
     align-items: center;
     padding: 6px 8px;
     cursor: pointer;
@@ -65,7 +71,7 @@
     flex: 1;
     font-weight: 500;
     color: var(--col-text);
-    overflow: hidden;
+    //overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
